[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Player/scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://src/Player/scripts/Push Area.gd" type="Script" id=2]
[ext_resource path="res://src/UI/GUI.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 60 )

[node name="Player" type="KinematicBody2D" groups=["Entity", "Player"]]
collision_layer = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
walk_speed = 400
run_speed = 700
jump_speed = -1200
gravity = 2500
acceleration = 0.3

[node name="Tittle" type="Position2D" parent="."]
position = Vector2( 0, -64 )
__meta__ = {
"_editor_description_": "Where tittle is, and where hit-dmg indicators spawn"
}

[node name="CollisionBox" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, 8 )
polygon = PoolVector2Array( -16, 56, 16, 56, 27, 47, 32, 34, 32, -48, 16, -56, -16, -56, -32, -48, -32, 34, -27, 47 )

[node name="TempPlayerModel" type="Polygon2D" parent="."]
color = Color( 0.156863, 0.772549, 0.87451, 1 )
polygon = PoolVector2Array( 24, 64, -24, 64, -32, 56, -32, -48, -24, -56, 24, -56, 32, -48, 32, 56 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -100 )
current = true
zoom = Vector2( 2, 2 )
smoothing_enabled = true
editor_draw_drag_margin = true

[node name="Push Area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Push Area"]
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GUI" parent="." instance=ExtResource( 3 )]

[connection signal="health_changed" from="." to="GUI" method="update_health"]
[connection signal="max_health_changed" from="." to="GUI" method="update_max_health"]
[connection signal="body_entered" from="Push Area" to="Push Area" method="_on_Push_Area_body_entered"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
